--- a/expenses_flutter_proj/pubspec.yaml
+++ b/expenses_flutter_proj/pubspec.yaml
@@ -1,4 +1,4 @@
-name: expenses_flutter_proj
+name: flutter_expenses_app
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.15.8
+  intl: ^0.16.1
   provider: ^4.3.2+2
 
 
@@ -47,7 +47,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+     - assets/image/waiting.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
